<resources>
    <string name="app_name">Lets Meet</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome,&#160;</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="btn_createmeet">CREATE MEETING</string>
    <string name="btn_createeve">CREATE EVENT</string>
    <string name="btn_schedule">MY SCHEDULE</string>
    <string name="btn_link_to_myschedule">Return to My Schedule</string>
    <string name="meet_created">Meeting Created</string>
    <string name="event_created">Event Created</string>
    <string name="title_activity_respond_event">RespondEvent</string>
    <string name="title_activity_schedule_meeting">Schedule Meeting</string>
    <string name="title_activity_schedule_generate_free_time">Generate Free Common Time</string>
    <string name="title_activity_respond_meeting">RespondMeeting</string>
    <string name="btn_scheduleMeet">Schedule</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


</resources>
