<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register"
    tools:context="${relativePackage}.${activityClass}">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btncreatemeet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:layout_marginTop="48dp"
        android:background="@color/bg_main"
        android:text="@string/btn_createmeet"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btncreateeve"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btncreatemeet"
        android:layout_marginTop="31dp"
        android:background="@color/bg_main"
        android:text="@string/btn_createeve"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <Button
        android:id="@+id/mySchedule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btncreateeve"
        android:layout_marginTop="38dp"
        android:background="@color/bg_main"
        android:text="@string/btn_schedule"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />
   <!-- <Button
        android:id="@+id/schedule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:background="@color/bg_main"
        android:text="@string/btn_scheduleMeet"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_below="@+id/mySchedule"
        android:layout_alignParentStart="true" />-->

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_main"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp" />


</RelativeLayout>